[package]
edition = "2021"
description = "Core part of `tiny-keccak` as public API"
license = "CC0-1.0"
name = "tiny-keccak-core"
version = "2.0.2"
authors = ["debris <marek.kotewicz@gmail.com>", "stackinspector"]

[lib]
path = "lib.rs"

[dependencies]
crunchy = "0.2.2"

[profile.dev]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[profile.test]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[[example]]
name = "cshake"

[dev-dependencies]
tiny-keccak = { version = "2", features = ["cshake"] }
getrandom = "0.2"
