[package]
name = "cshake-web"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/keccak-state"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cshake = { path = "../cshake", features = ["alloc"] }

[features]
