[package]
name = "cshake"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/keccak-core"

[lib]
path = "lib.rs"

[dependencies]
zeroize = { version = "1", optional = true }
foundations = { path = "../../foundations", features = ["xor"] }
keccak-core = { path = "../", features = ["zeroize-on-drop", "left-encode"] }

[features]
default = []
alloc = []
zeroize-on-drop = ["zeroize", "keccak-core/zeroize-on-drop"]
