[package]
name = "cshake"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/keccak-state"

[lib]
path = "lib.rs"

[dependencies]
zeroize = { version = "1.6.0", optional = true }
getrandom = { version = "0.2.9", optional = true }
keccak-state = { path = "../keccak-state", features = ["zeroize-on-drop", "left-encode"] }

[features]
alloc = []
zeroize-on-drop = ["zeroize", "keccak-state/zeroize-on-drop"]
seed = ["getrandom"]
rand = ["seed"]
