[package]
name = "keccak-state"
version = "0.1.0"
edition = "2021"
authors = ["debris <marek.kotewicz@gmail.com>", "stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/keccak-state"

[lib]
path = "lib.rs"

[dependencies]
keccak = { version = "0.1.4", features = ["asm"] } # "simd" when portable_simd stable
zeroize = { version = "1.6.0", optional = true }
getrandom = { version = "0.2.9", optional = true }

[features]
alloc = []
zeroize-on-drop = ["zeroize"]
seed = ["getrandom"]
